--- a/app/src/main/res/navigation/animals_navigation.xml
+++ b/app/src/main/res/navigation/animals_navigation.xml
@@ -26,5 +26,8 @@
             app:destination="@id/listFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <argument
+            android:name="AnimalModel"
+            app:argType="com.example.zooapp.model.AnimalModel" />
     </fragment>
 </navigation>
