adicionando as imagens com o data Binding

--- a/app/src/main/res/layout/item_animal.xml
+++ b/app/src/main/res/layout/item_animal.xml
@@ -18,8 +18,10 @@
             android:id="@+id/animalImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:imageUrl="@{animal.imageUrl}"
             android:scaleType="center"
             android:src="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
