adicionando navegação entre telas com o data binding

--- a/app/src/main/res/layout/item_animal.xml
+++ b/app/src/main/res/layout/item_animal.xml
@@ -6,12 +6,18 @@
         <variable
             name="animal"
             type="com.example.zooapp.model.AnimalModel" />
+        
+        <variable
+            name="listener"
+            type="com.example.zooapp.view.AnimalClickListener" />
     </data>
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/animalLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{listener::onClick}"
+        android:tag="@{animal.name}"
         android:orientation="vertical">
 
         <ImageView
